--- a/library.properties
+++ b/library.properties
@@ -2,8 +2,8 @@ name=WindQX_Library
 version=1.0.0
 author=Carlos Orts <mcorts69@gmail.com>
 maintainer=Carlos Orts <mcorts69@gmail.com>
-sentence=Arduino library to read WindQX anemometers IoT devices from ECD (e.g. SA.01) using serial.
-paragraph=Over serial line implementation (OSI 2/OSI 1)
+sentence=Serial WindQX´s solid state anemometers library.
+paragraph=It measures the wind speed and the temperature from IoT devices made by ECD (e.g. SA.01)
 category=Sensors
 url=https://github.com/McOrts/WindQX_Library
 architectures=*
