--- a/library.properties
+++ b/library.properties
@@ -1,4 +1,4 @@
-name=WindQX_Library
+name=WindQX
 version=1.0.0
 author=Carlos Orts <mcorts69@gmail.com>
 maintainer=Carlos Orts <mcorts69@gmail.com>
